# jet

./: .gitignore  jet  jet.py  makefile  pyproject.toml  readme.md  requirements.txt
data/: data.jsonl  data0.jsonl  data1.jsonl  data2.jsonl
src/: __init__.py  jet.py
src/commands/: DefaultOptions.py  Legend.py  Line.py  Mod.py  Palette.py  Plot.py  Reference.py  Scatter.py  __init__.py
src/utils/: Chain.py  Color.py  Counter.py  Nint.py  Utils.py  Where.py  __init__.py
